can select date from edit past days

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="cat.judith.stopsmoking.CigaretteCounter" />
         </activity>
-        <activity android:name=".Settings"></activity>
+        <activity android:name=".Settings" />
+        <activity android:name=".EditPastDaysActivity"></activity>
     </application>
 
 </manifest>
